# AoC

./: day_12.py  day_14.py  day_14_2.py  day_1_second.py  day_2_first.py  day_3_first.py  day_4_second.py  day_5_first.py  day_5_second.py  day_6_first.py  day_7.py  day_8.py
2021/python/day_1/: day_1_first.py
2021/python/day_15/: day_15  day_15.py  day_15_GH.py
2021/python/day_17/: day_17.py
2021/python/day_2/: day_2_second.py
2022/go/: go.mod  main.go
2022/go/day01/: main.go
2022/go/day02/: main.go
2022/go/day03/: main.go
2022/go/day04/: main.go
2022/go/day05/: main.go
2022/go/day06/: main.go
2022/go/day07/: main.go
2022/go/day08/: main.go
2022/go/globals/: main.go
2022/rust/: Cargo.toml
2022/rust/src/: advent_of_code.rs  main.rs
2022/rust/src/days/: day01.rs
2023/rust/: .gitignore  Cargo.toml  justfile
2023/rust/aoc_2023_rust_lib/: Cargo.toml
2023/rust/aoc_2023_rust_lib/src/: lib.rs
2023/rust/aoc_2023_rust_runner/: Cargo.toml
2023/rust/aoc_2023_rust_runner/src/: main.rs
2023/rust/days/: day-01.bench.txt
2023/rust/days/daily-template/: Cargo.toml
2023/rust/days/day-01/: Cargo.toml
2023/rust/days/day-02/: Cargo.toml
2023/rust/src/: lib.rs  main.rs
2024/rust/: .gitignore  Cargo.toml  justfile
2024/rust/aoc_rust_lib/: Cargo.toml
2024/rust/aoc_rust_runner/: Cargo.toml
day_10/: day_10.py
day_11/: day_11.py
day_12/: day_12_second.py
day_13/: day_13.py
day_15/: day_15.cpp
day_16/: day_16.py
day_22/: day_22.py
day_3/: day_3_second.py
day_4/: day_4_first.py
day_9/: day_9.py
(+25 files in other folders)
