[package]
name = "aoc_2023_rust_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc_2023_rust_runner"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.20"
reqwest = { version = "0.12.2", features = ["blocking"] }
chrono = "0.4.31"
aoc_2023_rust_lib = {path = "../aoc_2023_rust_lib/"}